--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ body {
     font-size: 3.5em;
     margin-bottom: 50px;
     color: #ffffff;
+    line-height: 50px;
 }
 .descricao p {
     font-size: 1.2em;
